# fern

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FernConfig.cmake.in  INSTALL.md  README.md  build.sh  build_slider_demo.sh  fern  fern-cli.sh  fern-dev.sh  fern.pc.in  install.sh  install_new.sh  requirements.txt  setup.py  template.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
cli/: fern_cli.py  terra_cli.py
cli/commands/: bloom.py  fire.py  install.py  sprout.py
cli/utils/: config.py
docs/: README.md  beta-0.1.0-release-notes.md  cli-tooling-guide.md  cpp-docs.md  dirty-checking-guide.md  getting-started.md  migration-guide.md
docs/development/: architecture.md  contributing.md  performance.md
docs/graphics/: colors.md  fonts.md  primitives.md  styling.md
docs/platform/: cross-platform.md  linux.md  web.md
docs/widgets/: button.md  circle.md  circular-indicator.md  line.md  progress-bar.md  radio-button.md  slider.md  text-input.md  text.md
examples/cpp/: baseline_test.cpp  basic_counter_example.cpp  button_features_showcase.cpp  button_presets_comprehensive.cpp  circle_hover_fixed.cpp  circular_indicator_demo_fixed.cpp  color_picker.cpp  complex_layout.cpp  counter.cpp  debug_dirty.cpp  dirty_checking_test.cpp  dropdown_demo.cpp  dropdown_demo_fixed.cpp  expanded_example.cpp  font_demo.cpp  improved_text_input_example.cpp  input_demo.cpp  layout_button_test.cpp  layout_spacing_comprehensive.cpp  linux_input_test.cpp  physics_art_canvas.cpp  platform_test.cpp  progress_bar_demo_fixed.cpp  proper_dirty_test.cpp  radio_button_demo_fixed.cpp  responsive_example.cpp  scene_management_demo.cpp  scene_manager_demo.cpp  shape_example.cpp  simple_calculator.cpp  simple_color_test.cpp  simple_dirty_test.cpp  simple_font_demo.cpp  simple_layout.cpp  simple_resize_test.cpp  slider_demo.cpp  smart_home_dashboard.cpp  space_station_game.cpp  stellar_pilot_game.cpp  text_centering_test.cpp  (+13 more)
examples/cpp/new/: 01_hello_text.cpp  01_hello_text_temp  03_colored_boxes.cpp  06_button_styles.cpp  07_text_sizes.cpp  08_simple_form.cpp  09_option_selector.cpp  10_color_picker.cpp  11_click_counter.cpp  12_color_buttons.cpp  14_text_showcase.cpp  15_number_pad.cpp  18_container_grid.cpp  19_text_input_example.cpp  circle_widget_example.cpp  circular_indicator_widget_example.cpp  complete_layout_showcase.cpp  dropdown_widget_example.cpp  dropdown_widget_example_temp  final_layout_showcase.cpp  interactive_widget_showcase.cpp  layout_based_widget_showcase.cpp  line_widget_example.cpp  progress_bar_widget_example.cpp  radio_button_groups_example.cpp  radio_button_groups_fixed.cpp  radio_button_manual.cpp  radio_button_simple.cpp  radio_button_widget_example.cpp  slider_widget_example.cpp  test_resize_simple.cpp  test_resize_simple_temp
fonts/: README.md
report/: Makefile  README.md  main.aux  main.tex
src/c/: fern.c
src/cpp/: CMakeLists.txt
src/cpp/include/fern/: fern.hpp
src/cpp/include/fern/core/: canvas.hpp  input.hpp  responsive_widget.hpp  scene_manager.hpp  signal.hpp  types.hpp  widget_manager.hpp
src/cpp/include/fern/font/: font.hpp  font_manager.hpp  ttf_font_renderer.hpp  ttf_reader.hpp
src/cpp/include/fern/graphics/: colors.hpp  primitives.hpp
src/cpp/include/fern/platform/: renderer.hpp
src/cpp/include/fern/text/: font.hpp
src/cpp/include/fern/ui/: button.hpp  circle_widget.hpp  line_widget.hpp  text_widget.hpp
src/cpp/include/fern/ui/containers/: container.hpp
src/cpp/include/fern/ui/layout/: layout.hpp
src/cpp/include/fern/ui/widgets/: button_widget.hpp  circle_widget.hpp  circular_indicator_widget.hpp  dropdown_widget.hpp  line_widget.hpp  progress_bar_widget.hpp  radio_button_widget.hpp  slider_widget.hpp  text_input_widget.hpp  text_widget.hpp  widget.hpp
src/cpp/src/: fern.cpp
src/cpp/src/core/: input.cpp  scene_manager.cpp  widget_manager.cpp
src/cpp/src/font/: font.cpp  ttf_font_renderer.cpp  ttf_reader.cpp
src/cpp/src/graphics/: colors.cpp  primitives.cpp
src/cpp/src/platform/: linux_renderer.cpp  macos_renderer.mm  platform_factory.cpp  web_renderer.cpp
src/cpp/src/text/: font.cpp  font_data.cpp  font_data.hpp
src/cpp/src/ui/: button.cpp  circle_widget.cpp  column_widget.cpp  line_widget.cpp  text_widget.cpp
src/cpp/src/ui/containers/: container.cpp
src/cpp/src/ui/layout/: center_widget.cpp  column_widget.cpp  expanded_widget.cpp  padding_widget.cpp  row_widget.cpp  spacing_widget.cpp
src/cpp/src/ui/widgets/: button_widget.cpp  circle_widget.cpp  circular_indicator_widget.cpp  dropdown_widget.cpp  line_widget.cpp  progress_bar_widget.cpp  radio_button_widget.cpp  slider_widget.cpp  text_input_widget.cpp  text_widget.cpp
test_project/: README.md  fern.yaml
test_project/lib/: main.cpp  main_temp
web_template_demo/: README.md  fern.yaml
web_template_demo/lib/: main.cpp
web_template_demo/web/: template.html
